--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
           </div>
           <div class="gallery-box" id="card">
-            <img src="images/Treble-cliff-01.svg" alt="treble-cliff">
+            <img src="images/Treble-cliff-01-01.svg" alt="treble-cliff">
             <h1>Treble Cliff Icon</h1>
             <p class="title-name">Music Mixer</p>
             <p>Icon for the Treble Cliff Feature</p>
             <p><button>Icon-2</button></p>
           </div>    
           <div class="gallery-box" id="card">
-          <img src="images/drums-01.svg" alt="drums">
+          <img src="images/drums-01-01.svg" alt="drums">
           <h1>Drums  Icon</h1>
           <p class="title-name">Music Mixer</p>
           <p>Icon for the drums  Feature</p>
@@ -77,14 +77,14 @@
   </div>
 
   <div class="gallery-box" id="card">
-    <img src="images/Alan_walker.svg" alt="Alaan walker">
+    <img src="images/Alan-walker-01-01.svg" alt="Alaan walker">
     <h1>Alan walker Icon</h1>
     <p class="title-name">Music Mixer</p>
     <p>Icon for the alan walker music</p>
     <p><button>Icon-8</button></p>
   </div>
   <div class="gallery-box" id="card">
-    <img src="images/Flute-01.svg" alt="Flute">
+    <img src="images/Flute-01-01.svg" alt="Flute">
     <h1>Flute Icon</h1>
     <p class="title-name">Music Mixer</p>
     <p>Icon for the flute</p>
