--- a/index.html
+++ b/index.html
@@ -18,48 +18,119 @@
         </nav>
 
 <main>
-<div class="grid-con" id="gallery">
+<!-- <div class="grid-con" id="gallery"> -->
         <h2 class="hidden">Showcase of my SVG </h2>
-
+        <div class="row" style="display: flex; justify-content: center; margin-top: 40px;">
+          <div class="column">
         <div class="gallery-box" id="card">
-          <img src="images/fav-song-01.svg" alt="Fav-song">
+          <img src="images/fav-song-01.svg" style="height: 50px; width: 50px;" alt="Fav-song">
             <h1>Favourite tune Icon</h1>
             <p class="title-name">Music Mixer</p>
             <p>Icon will save users fav tune</p>
-
-
+            <p>Icon for the Treble Cliff Feature</p>
+            <p><button>Click For Js!</button></p> 
           </div>
-          <div class="gallery-box" id="card">
-            <img src="images/Treble-cliff-01-01.svg" alt="treble-cliff">
+          </div>
+          <div class="column">
+            <div class="gallery-box" id="card">
+            <img src="images/Treble-cliff-01-01.svg" style="height: 50px; width: 50px;" alt="treble-cliff">
             <h1>Treble Cliff Icon</h1>
             <p class="title-name">Music Mixer</p>
             <p>Icon for the Treble Cliff Feature</p>
-            <p><button>Icon-2</button></p>
-          </div>    
+            <p><button>Click For Js!</button></p>
+          </div>   
+          </div> 
+          <div class="column">
           <div class="gallery-box" id="card">
-          <img src="images/drums-01-01.svg" alt="drums">
+          <img src="images/drumer-01.svg" style="height: 50px; width: 50px;" alt="drums">
           <h1>Drums  Icon</h1>
           <p class="title-name">Music Mixer</p>
           <p>Icon for the drums  Feature</p>
-          <p><button>Icon-3</button></p>
+          <p><button>Click For Js!</button></p>
         </div>
-
+        </div>  
+        <div class="column">
         <div class="gallery-box" id="card">
-            <img src="images/Equalizer-01.svg" alt="equalizer">       
+            <img src="images/Equalizer-01.svg" style="height: 50px; width: 50px;" alt="equalizer">       
         <h1>Equalizer Icon</h1>
         <p class="title-name">Music Mixer</p>
         <p>Icon for the equalizer Feature</p>
-        <p><button>Icon-4</button></p>
+        <p><button>Click For Js!</button></p>
+        </div>
       </div>
-      
+      <div class="column">
       <div class="gallery-box" id="card">
-        <img src="images/piano-icon-01.svg" alt="piano">
+        <img src="images/Flute-01-01.svg" style="height: 50px; width: 50px;" alt="Flute">
+        <h1>Flute Icon</h1>
+        <p class="title-name">Music Mixer</p>
+        <p>Icon for the flute</p>
+        <p><button>Click For Js!</button></p>
+      </div>
+      </div>
+      </div>
+
+
+      <div class="row" style="display: flex; justify-content: center; margin-top: 40px;">
+        <div class="column">
+      <div class="gallery-box" id="card">
+        <img src="images/piano-icon-01.svg" style="height: 50px; width: 50px;" alt="Fav-song">
+          <h1>Piano Icon</h1>
+          <p class="title-name">Music Mixer</p>
+          <p>Icon for the piano </p>
+          <p><button>Click For Js!</button></p> 
+        </div>
+        </div>
+        <div class="column">
+            <div class="gallery-box" id="card">
+          <img src="images/Speakers-01.svg" style="height: 50px; width: 50px;" alt="treble-cliff">
+          <h1>Speakers Icon</h1>
+          <p class="title-name">Music Mixer</p>
+          <p>Icon for the speaker controls</p>
+          <p><button>Click For Js!</button></p>
+        </div>   
+        </div> 
+        <div class="column">
+        <div class="gallery-box" id="card">
+        <img src="images/DJ-01.svg" style="height: 50px; width: 50px;" alt="drums">
+        <h1>DJ control Icon</h1>
+        <p class="title-name">Music Mixer</p>
+        <p>Icon for DJ Feature control</p>
+        <p><button>Click For Js!</button></p>
+      </div>
+      </div>  
+      <div class="column">
+      <div class="gallery-box" id="card">
+          <img src="images/Alan-walker-01-01.svg" style="height: 50px; width: 50px;" alt="equalizer">       
+      <h1>Alan walker</h1>
+      <p class="title-name">Music Mixer</p>
+      <p>Icon for adding alan walker tunes</p>
+      <p><button>Click For Js!</button></p>
+      </div>
+    </div>
+
+    <div class="column">
+    <div class="gallery-box" id="card">
+      <img src="images/Rec-01.svg" style="height: 50px; width: 50px;" alt="Flute">
+      <h1>Record Icon</h1>
+      <p class="title-name">Music Mixer</p>
+      <p>Icon for Record</p>
+      <p><button>Click For Js!</button></p>
+    </div>
+    </div>
+    </div>
+
+      <!-- <div class="row">
+        <div class="column">
+      <div class="gallery-box" id="card">
+        <img src="images/DJ-01.svg" alt="piano">
       <h1>piano Icon</h1>
       <p class="title-name">Music Mixer</p>
       <p>Icon for the piano Feature</p>
       <p><button>Icon-5</button></p>
     </div>
+  </div>
 
+  <div class="column">
     <div class="gallery-box" id="card">
     <img src="images/Speakers-01.svg" alt="speakers">
     <h1>Speaker Icon</h1>
@@ -67,23 +138,31 @@
     <p>Icon for the speaker>
     <p><button>Icon-6</button></p>
   </div>
+</div>
 
-  <div class="gallery-box" id="card">
+<div class="column">
+<div class="gallery-box" id="card">
     <img src="images/DJ-01.svg"alt="DJ">
     <h1>DJ Icon</h1>
     <p class="title-name">Music Mixer</p>
     <p>Icon for the DJ music</p>
     <p><button>Icon-7</button></p>
   </div>
+</div>
 
-  <div class="gallery-box" id="card">
+<div class="column">
+<div class="gallery-box" id="card">
     <img src="images/Alan-walker-01-01.svg" alt="Alaan walker">
     <h1>Alan walker Icon</h1>
     <p class="title-name">Music Mixer</p>
     <p>Icon for the alan walker music</p>
     <p><button>Icon-8</button></p>
   </div>
-  <div class="gallery-box" id="card">
+</div>  
+
+</div> -->
+
+  <!-- <div class="gallery-box" id="card">
     <img src="images/Flute-01-01.svg" alt="Flute">
     <h1>Flute Icon</h1>
     <p class="title-name">Music Mixer</p>
@@ -97,11 +176,8 @@
     <p>Icon for Record</p>
     <p><button>Icon-9</button></p>
   </div>
-
-  </div>
-=======
-  
-</div>
+  -->
+<!-- \</div>
  
 </main>
     <footer>
